# jhop

./: .editorconfig  .gitignore  README.md  flake.nix  main.py  pyproject.toml
tests/: test_main.py
