[tool.poetry]
name = "jhop"
version = "0.1.0"
description = ""
authors = ["Vivek Ranjan <vivek@vivekranjan.me>"]
readme = "README.md"
#package-mode = false
packages = [
    { include = "*.py" }
]

[tool.poetry.scripts]
start = "main:start"

[tool.poetry.dependencies]
python = "^3.12.1"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
