[tool.poetry]
name = "jhop"
version = "0.1.0"
description = ""
authors = ["Vivek Ranjan <vivek@vivekranjan.me>"]
readme = "README.md"
#package-mode = false
packages = [
    { include = "*.py" }
]

[tool.poetry.scripts]
start = "main:start"

[tool.poetry.dependencies]
python = "^3.12.1"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests",
]
